feat(admin): endpoints for unique challenge deployments
